<resources>
    <string name="app_name">WeatherApp</string>

    <string name="location">Vị trí</string>
    <string name="datetime">Thời gian</string>
    <string name="temperature">27°C</string>
    <string name="weathertext">Mưa</string>

    <string name="settings">Cài đặt</string>
    <string name="delete">Xóa</string>

    <string name="hourly">Hàng giờ</string>
    <string name="daily">Hàng ngày</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>